objects/ssot__ClinicalEncounterServiceRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequest__c</fullName>
        <label>Clinical Service Request</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Encounter Service Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716488922282_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterServiceRequest_Clin_rel</label>
        <referenceTo>ssot__ClinicalEncounter__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterServiceRequest_Clin_rel</relationshipLabel>
        <relationshipName>rel_1716488922282_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716535157808_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalEncounterServiceRequest_Clin_rel</label>
        <referenceTo>ssot__ClinicalServiceRequest__dlm</referenceTo>
        <relationshipLabel>ClinicalEncounterServiceRequest_Clin_rel</relationshipLabel>
        <relationshipName>rel_1716535157808_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>